tests/proxy/netpol/isolate-central-and-scanner-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-central-egress
  namespace: stackrox
spec:
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              proxy-service: "true"
      ports:
        - port: 1080
          protocol: TCP
        - port: 3128
          protocol: TCP
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
    - to:
      - podSelector:
          matchLabels: {}
  podSelector:
    matchLabels:
      app: central
  policyTypes:
    - Egress
#---
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: isolate-scanner-egress
#  namespace: stackrox
#spec:
#  egress:
#    - to:
#        - podSelector:
#            matchLabels:
#              proxy-service: "true"
#      ports:
#        - port: 3128
#          protocol: TCP
#    - ports:
#        - port: 53
#          protocol: TCP
#        - port: 53
#          protocol: UDP
#    - to:
#        - podSelector:
#            matchLabels: {}
#  podSelector:
#    matchLabels:
#      app: scanner
#  policyTypes:
#    - Egress
